--- a/src/app/pages/search-page/search.component.html
+++ b/src/app/pages/search-page/search.component.html
@@ -35,7 +35,7 @@
 
             <ng-container *ngFor="let facet of facets">
               <md-checkbox [(ngModel)]="facet.checked" class="search__sidenav__item" (change)="checkboxClicked()">
-                <span class="search__sidenav__item__name">{{facet.name}}</span>
+                <span class="search__sidenav__item__name">{{(facet.name + '_TITLE') | translate}}</span>
                 <span class="search__sidenav__item__count">({{facet.count}})</span>
               </md-checkbox>
             </ng-container>
