--- a/src/app/pages/dashboard-page/funnel-graph/funnel-graph.component.html
+++ b/src/app/pages/dashboard-page/funnel-graph/funnel-graph.component.html
@@ -32,32 +32,32 @@
     <tbody *ngIf="funnel">
       <tr>
         <td><div [style.background]="colors[0]" class="color-indicator"></div>{{'DASHBOARD_EVENTSFUNNEL_CLICK' | translate}}</td>
-        <td class="cell--align-right">{{funnel.click.count}}</td>
-        <td class="cell--align-right">{{funnel.click.percentage || '-'}}%</td>
-        <td class="cell--align-right">{{funnel.click.relativePercentage || '-'}}%</td>
+        <td class="cell--align-right">{{funnel.click.count | numberlocale}}</td>
+        <td class="cell--align-right">{{(funnel.click.percentage | numberlocale) || '-'}}%</td>
+        <td class="cell--align-right">{{(funnel.click.relativePercentage | numberlocale) || '-'}}%</td>
       </tr>
       <tr>
         <td><div [style.background]="colors[1]" class="color-indicator"></div>{{'DASHBOARD_EVENTSFUNNEL_LEAD' | translate}}</td>
-        <td class="cell--align-right">{{funnel.lead.count}}</td>
-        <td class="cell--align-right">{{funnel.lead.percentage || '-'}}%</td>
-        <td class="cell--align-right">{{funnel.lead.relativePercentage || '-'}}%</td>
+        <td class="cell--align-right">{{funnel.lead.count | numberlocale}}</td>
+        <td class="cell--align-right">{{(funnel.lead.percentage | numberlocale) || '-'}}%</td>
+        <td class="cell--align-right">{{(funnel.lead.relativePercentage | numberlocale) || '-'}}%</td>
       </tr>
       <tr>
         <td><div [style.background]="colors[2]" class="color-indicator"></div>{{'DASHBOARD_EVENTSFUNNEL_MAIN' | translate}}</td>
-        <td class="cell--align-right">{{funnel.main.count}}</td>
-        <td class="cell--align-right">{{funnel.main.percentage || '-'}}%</td>
-        <td class="cell--align-right">{{funnel.main.relativePercentage || '-'}}%</td>
+        <td class="cell--align-right">{{funnel.main.count | numberlocale}}</td>
+        <td class="cell--align-right">{{(funnel.main.percentage | numberlocale) || '-'}}%</td>
+        <td class="cell--align-right">{{(funnel.main.relativePercentage | numberlocale) || '-'}}%</td>
       </tr><tr>
         <td><div [style.background]="colors[3]" class="color-indicator"></div>{{'DASHBOARD_EVENTSFUNNEL_UPSELL' | translate}}</td>
-        <td class="cell--align-right">{{funnel.upsell.count}}</td>
-        <td class="cell--align-right">{{funnel.upsell.percentage || '-'}}%</td>
-        <td class="cell--align-right">{{funnel.upsell.relativePercentage || '-'}}%</td>
+        <td class="cell--align-right">{{funnel.upsell.count | numberlocale}}</td>
+        <td class="cell--align-right">{{(funnel.upsell.percentage | numberlocale) || '-'}}%</td>
+        <td class="cell--align-right">{{(funnel.upsell.relativePercentage | numberlocale) || '-'}}%</td>
       </tr>
       <tr>
         <td><div [style.background]="colors[4]" class="color-indicator"></div>{{'DASHBOARD_EVENTSFUNNEL_CONFIRM' | translate}}</td>
-        <td class="cell--align-right">{{funnel.confirm.count}}</td>
-        <td class="cell--align-right">{{funnel.confirm.percentage || '-'}}%</td>
-        <td class="cell--align-right">{{funnel.confirm.relativePercentage || '-'}}%</td>
+        <td class="cell--align-right">{{funnel.confirm.count | numberlocale}}</td>
+        <td class="cell--align-right">{{(funnel.confirm.percentage | numberlocale) || '-'}}%</td>
+        <td class="cell--align-right">{{(funnel.confirm.relativePercentage | numberlocale) || '-'}}%</td>
       </tr>
     </tbody>
   </table>
