--- a/src/app/pages/components/table-memory/table-memory.component.html
+++ b/src/app/pages/components/table-memory/table-memory.component.html
@@ -32,7 +32,8 @@
         </div>
         <ng-template #noCode>
           <div [class.flex-custom]="params.copy" [class.flex-custom--center]="params.copy">
-            {{params.mappingFunction(entity)}}
+            <ng-container *ngIf="params.number; else nan">{{params.mappingFunction(entity) | numberlocale}}</ng-container>
+            <ng-template #nan>{{params.mappingFunction(entity)}}</ng-template>
             <md-icon *ngIf="params.copy" class="copy-icon" md-tooltip="{{'SHARE_COPY' | translate}}" ngxClipboard [cbContent]="params.mappingFunction(entity)">content_copy</md-icon>
           </div>
         </ng-template>
