--- a/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-details/state-machine-details.component.html
+++ b/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-details/state-machine-details.component.html
@@ -1,6 +1,6 @@
 <div class="state-machine-details__container">
   <div class="state-machine-details__info">
-    <div *ngIf="queue.loaded" class="state-machine-details__info__count">{{queue.count}}</div>
+    <div *ngIf="queue.loaded" class="state-machine-details__info__count">{{queue.count | numberlocale}}</div>
     <div *ngIf="!queue.loaded" class="placeholder placeholder--large"></div>
 
     <div class="state-machine-details__info__title">
@@ -23,7 +23,7 @@
       <div class="state-machine-details__info__details__box">
         <div class="item-title">{{'ORDERENGINE_DETAILS_FAILURERATE' | translate}}</div>
         <div class="value-container">
-          <div *ngIf="queue.loaded" class="item-value">{{queue.failureRate}}%</div>
+          <div *ngIf="queue.loaded" class="item-value">{{queue.failureRate | numberlocale}}%</div>
           <div *ngIf="!queue.loaded" class="placeholder placeholder--small"></div>
 
           <div class="arrow"
