--- a/src/app/pages/search-page/perfect-match/perfect-product/perfect-product.component.html
+++ b/src/app/pages/search-page/perfect-match/perfect-product/perfect-product.component.html
@@ -23,7 +23,7 @@
 
         <div class="perfect-entity__info__fields__item">
           <span class="perfect-entity__info__fields__item__label">{{'SEARCH_ADVANCED_SHIPDELAY' | translate}}:</span>
-          <span class="perfect-entity__info__fields__item__value">{{product.shippingDelay}}</span>
+          <span class="perfect-entity__info__fields__item__value">{{product.shippingDelay | numberlocale}}</span>
         </div>
 
         <div class="perfect-entity__info__fields__item">
