--- a/src/app/pages/search-page/result-item/result-item.component.html
+++ b/src/app/pages/search-page/result-item/result-item.component.html
@@ -17,7 +17,7 @@
     </ng-container>
 
     <ng-container *ngIf="entityType === 'transaction'">
-      <div class="search__content__results--table__item"> {{formatCurrency(fields.amount)}} </div>
+      <div class="search__content__results--table__item"> {{formatCurrency(fields.amount) | numberlocale}} </div>
     </ng-container>
 
   </div>
