Add email templates to smpt provider view

--- a/src/app/pages/smtp-providers-page/smtp-provider-view/smtp-provider-view.component.html
+++ b/src/app/pages/smtp-providers-page/smtp-provider-view/smtp-provider-view.component.html
@@ -30,7 +30,7 @@
     </md-tab>
 
     <md-tab>
-      <coming-soon [inPage]="true"></coming-soon>
+      <smtp-provider-email-templates [smtpProvider]="entity"></smtp-provider-email-templates>
     </md-tab>
 
     <md-tab>
