--- a/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-add-new/merchant-provider-add-new.component.html
+++ b/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-add-new/merchant-provider-add-new.component.html
@@ -1,27 +1,27 @@
 <form #merchantProviderForm="ngForm" [class.merchant-provider--create]="mode === modes.Add">
   <div class="entity-view__card" [class.entity-view__card--create]="mode === modes.Add">
     <div class="entity-view__card__header">
-      <div class="entity-view__card__header__title">{{'MERCHANT_INFO_SETTINGS_TITLE' | translate}}</div>
+      <div class="entity-view__card__header__title">{{'MERCHANTPROVIDER_INFO_SETTINGS_TITLE' | translate}}</div>
     </div>
 
     <div class="entity-view__card__content merchant-provider-view__details">
 
       <md-input-container *ngIf="mode === modes.Add" class="entity-view__card__content__item" [class.error]="formInvalid && !entity.name">
-        <input required md-input placeholder="{{'MERCHANT_INFO_SETTINGS_NAME' | translate}}" name="name" [(ngModel)]="entity.name" type="text">
+        <input required md-input placeholder="{{'MERCHANTPROVIDER_INFO_SETTINGS_NAME' | translate}}" name="name" [(ngModel)]="entity.name" type="text">
       </md-input-container>
 
       <div class="flex-custom flex-custom--center merchant-provider-view__details__selectable">
         <md-icon>power_settings_new</md-icon>
-        <span>{{'MERCHANT_INFO_SETTINGS_ENABLED' | translate}}</span>
+        <span>{{'MERCHANTPROVIDER_INFO_SETTINGS_ENABLED' | translate}}</span>
         <md-checkbox class="flex-align--right" [disabled]="mode === modes.View" name="enabled" [(ngModel)]="entity.enabled"></md-checkbox>
       </div>
       <div class="flex-custom flex-custom--center merchant-provider-view__details__selectable">
         <md-icon>credit_card</md-icon>
-        <span>{{'MERCHANT_INFO_SETTINGS_ALLOWPREPAID' | translate}}</span>
+        <span>{{'MERCHANTPROVIDER_INFO_SETTINGS_ALLOWPREPAID' | translate}}</span>
         <md-checkbox class="flex-align--right" [disabled]="mode === modes.View" name="allowPrepaid" [(ngModel)]="entity.allowPrepaid"></md-checkbox>
       </div>
 
-      <div class="merchant-provider-view__details__subtitle">{{'MERCHANT_INFO_SETTINGS_ACCEPTED' | translate}}</div>
+      <div class="merchant-provider-view__details__subtitle">{{'MERCHANTPROVIDER_INFO_SETTINGS_ACCEPTED' | translate}}</div>
 
       <div *ngFor="let card of allCreditCards" class="flex-custom flex-custom--center merchant-provider-view__details__selectable">
         <span>{{card}}</span>
@@ -32,53 +32,53 @@
 
   <div class="entity-view__card" [class.entity-view__card--create]="mode === modes.Add">
     <div class="entity-view__card__header">
-      <div class="entity-view__card__header__title">{{'MERCHANT_INFO_PROCESSING_TITLE' | translate}}</div>
+      <div class="entity-view__card__header__title">{{'MERCHANTPROVIDER_INFO_PROCESSING_TITLE' | translate}}</div>
     </div>
 
     <div class="entity-view__card__content merchant-provider-view__details">
       <md-input-container class="entity-view__card__content__item merchant-provider-view__details__input--numbers" [class.error]="formInvalid && !entity.processing.monthlyCap">
-        <input required [disabled]="mode === modes.View" (keydown)="isFloatNumeric($event)" md-input placeholder="{{'MERCHANT_INFO_PROCESSING_MONTHLYCAPD' | translate}}" name="monthlyCap" [(ngModel)]="entity.processing.monthlyCap" type="text">
+        <input required [disabled]="mode === modes.View" (keydown)="isFloatNumeric($event)" md-input placeholder="{{'MERCHANTPROVIDER_INFO_PROCESSING_MONTHLYCAPD' | translate}}" name="monthlyCap" [(ngModel)]="entity.processing.monthlyCap" type="text">
       </md-input-container>
 
       <md-input-container class="entity-view__card__content__item merchant-provider-view__details__input--numbers" [class.error]="formInvalid && !entity.processing.transactionCounts.monthly && entity.processing.transactionCounts.monthly !== 0">
-        <input required [disabled]="mode === modes.View" (keydown)="isNumeric($event)" md-input placeholder="{{'MERCHANT_INFO_PROCESSING_MONTHLYCAPC' | translate}}" name="monthlyCapCount" [(ngModel)]="entity.processing.transactionCounts.monthly" type="text">
+        <input required [disabled]="mode === modes.View" (keydown)="isNumeric($event)" md-input placeholder="{{'MERCHANTPROVIDER_INFO_PROCESSING_MONTHLYCAPC' | translate}}" name="monthlyCapCount" [(ngModel)]="entity.processing.transactionCounts.monthly" type="text">
       </md-input-container>
 
       <md-input-container class="entity-view__card__content__item merchant-provider-view__details__input--numbers" [class.error]="formInvalid && !entity.processing.transactionCounts.weekly && entity.processing.transactionCounts.weekly !== 0">
-        <input required [disabled]="mode === modes.View" (keydown)="isNumeric($event)" md-input placeholder="{{'MERCHANT_INFO_PROCESSING_WEEKLYCAP' | translate}}" name="weeklyCapCount" [(ngModel)]="entity.processing.transactionCounts.weekly" type="text">
+        <input required [disabled]="mode === modes.View" (keydown)="isNumeric($event)" md-input placeholder="{{'MERCHANTPROVIDER_INFO_PROCESSING_WEEKLYCAP' | translate}}" name="weeklyCapCount" [(ngModel)]="entity.processing.transactionCounts.weekly" type="text">
       </md-input-container>
 
       <md-input-container class="entity-view__card__content__item merchant-provider-view__details__input--numbers" [class.error]="formInvalid && !entity.processing.transactionCounts.daily && entity.processing.transactionCounts.daily !== 0">
-        <input required [disabled]="mode === modes.View" (keydown)="isNumeric($event)" md-input placeholder="{{'MERCHANT_INFO_PROCESSING_DAILYCAP' | translate}}" name="dailyCapCount" [(ngModel)]="entity.processing.transactionCounts.daily" type="text">
+        <input required [disabled]="mode === modes.View" (keydown)="isNumeric($event)" md-input placeholder="{{'MERCHANTPROVIDER_INFO_PROCESSING_DAILYCAP' | translate}}" name="dailyCapCount" [(ngModel)]="entity.processing.transactionCounts.daily" type="text">
       </md-input-container>
 
       <md-input-container class="entity-view__card__content__item merchant-provider-view__details__input--numbers" [class.error]="formInvalid && !entity.processing.transactionFee && entity.processing.transactionFee !== 0">
-        <input required [disabled]="mode === modes.View" (keydown)="isFloatNumeric($event)" md-input placeholder="{{'MERCHANT_INFO_PROCESSING_TRANSACTIONFEE' | translate}}" name="transactionFee" [(ngModel)]="entity.processing.transactionFee" type="text">
+        <input required [disabled]="mode === modes.View" (keydown)="isFloatNumeric($event)" md-input placeholder="{{'MERCHANTPROVIDER_INFO_PROCESSING_TRANSACTIONFEE' | translate}}" name="transactionFee" [(ngModel)]="entity.processing.transactionFee" type="text">
       </md-input-container>
 
       <md-input-container class="entity-view__card__content__item merchant-provider-view__details__input--numbers" [class.error]="formInvalid && !entity.processing.discountRate && entity.processing.discountRate !== 0">
-        <input required [disabled]="mode === modes.View" (keydown)="isPercentage($event,entity.processing.discountRate)" md-input placeholder="{{'MERCHANT_INFO_PROCESSING_DISCOUNTRATE' | translate}}" name="discountRate" [(ngModel)]="entity.processing.discountRate" type="text">
+        <input required [disabled]="mode === modes.View" (keydown)="isPercentage($event,entity.processing.discountRate)" md-input placeholder="{{'MERCHANTPROVIDER_INFO_PROCESSING_DISCOUNTRATE' | translate}}" name="discountRate" [(ngModel)]="entity.processing.discountRate" type="text">
       </md-input-container>
 
       <md-input-container class="entity-view__card__content__item merchant-provider-view__details__input--numbers" [class.error]="formInvalid && !entity.processing.maximumChargebackRatio && entity.processing.maximumChargebackRatio !== 0">
-        <input required [disabled]="mode === modes.View" (keydown)="isPercentage($event,entity.processing.maximumChargebackRatio)" md-input placeholder="{{'MERCHANT_INFO_PROCESSING_CHARGEBACK' | translate}}" name="maxChargebackRatio" [(ngModel)]="entity.processing.maximumChargebackRatio" type="text">
+        <input required [disabled]="mode === modes.View" (keydown)="isPercentage($event,entity.processing.maximumChargebackRatio)" md-input placeholder="{{'MERCHANTPROVIDER_INFO_PROCESSING_CHARGEBACK' | translate}}" name="maxChargebackRatio" [(ngModel)]="entity.processing.maximumChargebackRatio" type="text">
       </md-input-container>
 
       <md-input-container class="entity-view__card__content__item merchant-provider-view__details__input--numbers" [class.error]="formInvalid && !entity.processing.reserveRate && entity.processing.reserveRate !== 0">
-        <input required [disabled]="mode === modes.View" (keydown)="isPercentage($event,entity.processing.reserveRate)" md-input placeholder="{{'MERCHANT_INFO_PROCESSING_RESERVE' | translate}}" name="reserveRate" [(ngModel)]="entity.processing.reserveRate" type="text">
+        <input required [disabled]="mode === modes.View" (keydown)="isPercentage($event,entity.processing.reserveRate)" md-input placeholder="{{'MERCHANTPROVIDER_INFO_PROCESSING_RESERVE' | translate}}" name="reserveRate" [(ngModel)]="entity.processing.reserveRate" type="text">
       </md-input-container>
     </div>
   </div>
 
   <div class="entity-view__card" [class.entity-view__card--create]="mode === modes.Add">
     <div class="entity-view__card__header">
-      <div class="entity-view__card__header__title">{{'MERCHANT_INFO_GATEWAY_TITLE' | translate}}</div>
+      <div class="entity-view__card__header__title">{{'MERCHANTPROVIDER_INFO_GATEWAY_TITLE' | translate}}</div>
     </div>
 
     <div class="entity-view__card__content merchant-provider-view__details">
 
       <md-input-container class="entity-view__card__content__item" [class.error]="formInvalid && !entity.gateway.name">
-        <input required [disabled]="mode === modes.View" md-input placeholder="{{'MERCHANT_INFO_GATEWAY_NAME' | translate}}" name="gatewayName" [(ngModel)]="entity.gateway.name" type="text">
+        <input required [disabled]="mode === modes.View" md-input placeholder="{{'MERCHANTPROVIDER_INFO_GATEWAY_NAME' | translate}}" name="gatewayName" [(ngModel)]="entity.gateway.name" type="text">
       </md-input-container>
 
       <dropdown-component
@@ -86,25 +86,25 @@
         [disabled]="mode === modes.View"
         [options]="allProviders"
         [selected]="entity.gateway.getType()"
-        [placeholder]="'MERCHANT_INFO_GATEWAY_TYPE' | translate"
+        [placeholder]="'MERCHANTPROVIDER_INFO_GATEWAY_TYPE' | translate"
         (onSelect)="entity.gateway.setType($event)">
       </dropdown-component>
 
       <ng-container *ngIf="entity.gateway.getType()">
         <md-input-container *ngIf="entity.gateway.isNMI() || entity.gateway.isTest()" class="entity-view__card__content__item">
-          <input [disabled]="mode === modes.View" md-input placeholder="{{'MERCHANT_INFO_GATEWAY_PROCESSORID' | translate}}" name="processorId" [(ngModel)]="entity.gateway.processorId" type="text">
+          <input [disabled]="mode === modes.View" md-input placeholder="{{'MERCHANTPROVIDER_INFO_GATEWAY_PROCESSORID' | translate}}" name="processorId" [(ngModel)]="entity.gateway.processorId" type="text">
         </md-input-container>
 
         <md-input-container *ngIf="entity.gateway.isInnovio()" class="entity-view__card__content__item">
-          <input [disabled]="mode === modes.View" md-input placeholder="{{'MERCHANT_INFO_GATEWAY_PRODUCTID' | translate}}" name="productId" [(ngModel)]="entity.gateway.productId" type="text">
+          <input [disabled]="mode === modes.View" md-input placeholder="{{'MERCHANTPROVIDER_INFO_GATEWAY_PRODUCTID' | translate}}" name="productId" [(ngModel)]="entity.gateway.productId" type="text">
         </md-input-container>
 
         <md-input-container class="entity-view__card__content__item" [class.error]="formInvalid && !entity.gateway.username && (entity.gateway.isNMI() || entity.gateway.isInnovio())">
-          <input [required]="entity.gateway.isNMI() || entity.gateway.isInnovio()" [disabled]="mode === modes.View" md-input placeholder="{{'MERCHANT_INFO_GATEWAY_USERNAME' | translate}}" name="username" [(ngModel)]="entity.gateway.username" type="text">
+          <input [required]="entity.gateway.isNMI() || entity.gateway.isInnovio()" [disabled]="mode === modes.View" md-input placeholder="{{'MERCHANTPROVIDER_INFO_GATEWAY_USERNAME' | translate}}" name="username" [(ngModel)]="entity.gateway.username" type="text">
         </md-input-container>
 
         <md-input-container class="entity-view__card__content__item" [class.error]="formInvalid && !entity.gateway.password && (entity.gateway.isNMI() || entity.gateway.isInnovio())">
-          <input [required]="entity.gateway.isNMI() || entity.gateway.isInnovio()" [disabled]="mode === modes.View" md-input placeholder="{{'MERCHANT_INFO_GATEWAY_PASSWORD' | translate}}" name="password" [(ngModel)]="entity.gateway.password" type="text">
+          <input [required]="entity.gateway.isNMI() || entity.gateway.isInnovio()" [disabled]="mode === modes.View" md-input placeholder="{{'MERCHANTPROVIDER_INFO_GATEWAY_PASSWORD' | translate}}" name="password" [(ngModel)]="entity.gateway.password" type="text">
         </md-input-container>
       </ng-container>
     </div>
@@ -112,32 +112,32 @@
 
   <div class="entity-view__card" [class.entity-view__card--create]="mode === modes.Add">
     <div class="entity-view__card__header">
-      <div class="entity-view__card__header__title">{{'MERCHANT_INFO_SERVICE_TITLE' | translate}}</div>
+      <div class="entity-view__card__header__title">{{'MERCHANTPROVIDER_INFO_SERVICE_TITLE' | translate}}</div>
     </div>
 
     <div class="entity-view__card__content merchant-provider-view__details merchant-provider-view__details--align">
 
       <md-input-container class="entity-view__card__content__item">
-        <input [disabled]="mode === modes.View" md-input placeholder="{{'MERCHANT_INFO_SERVICE_URI' | translate}}" name="url" [(ngModel)]="entity.customerService.url" type="text">
+        <input [disabled]="mode === modes.View" md-input placeholder="{{'MERCHANTPROVIDER_INFO_SERVICE_URI' | translate}}" name="url" [(ngModel)]="entity.customerService.url" type="text">
       </md-input-container>
 
       <md-input-container class="entity-view__card__content__item">
-        <input [disabled]="mode === modes.View" (keydown)="isEmail($event, entity.customerService.email)" md-input placeholder="{{'MERCHANT_INFO_SERVICE_EMAIL' | translate}}" name="email" [(ngModel)]="entity.customerService.email" type="text">
+        <input [disabled]="mode === modes.View" (keydown)="isEmail($event, entity.customerService.email)" md-input placeholder="{{'MERCHANTPROVIDER_INFO_SERVICE_EMAIL' | translate}}" name="email" [(ngModel)]="entity.customerService.email" type="text">
       </md-input-container>
 
       <md-input-container class="entity-view__card__content__item">
-        <input [disabled]="mode === modes.View" md-input placeholder="{{'MERCHANT_INFO_SERVICE_PHONE' | translate}}" [textMask]="{mask: mask, guide: false}" name="phone" [(ngModel)]="entity.customerService.phone" type="text">
+        <input [disabled]="mode === modes.View" md-input placeholder="{{'MERCHANTPROVIDER_INFO_SERVICE_PHONE' | translate}}" [textMask]="{mask: mask, guide: false}" name="phone" [(ngModel)]="entity.customerService.phone" type="text">
       </md-input-container>
 
       <md-input-container class="entity-view__card__content__item">
-        <input [disabled]="mode === modes.View" md-input placeholder="{{'MERCHANT_INFO_SERVICE_DESCRIPTION' | translate}}" name="description" [(ngModel)]="entity.customerService.description" type="text">
+        <input [disabled]="mode === modes.View" md-input placeholder="{{'MERCHANTPROVIDER_INFO_SERVICE_DESCRIPTION' | translate}}" name="description" [(ngModel)]="entity.customerService.description" type="text">
       </md-input-container>
 
     </div>
 
     <div *ngIf="mode === modes.Add" class="entity-view__card__actions">
-      <div (click)="cancel.emit(true)">{{'MERCHANT_INFO_CANCEL' | translate}}</div>
-      <div (click)="saveProvider(merchantProviderForm.form.valid)">{{'MERCHANT_INFO_SAVE' | translate}}</div>
+      <div (click)="cancel.emit(true)">{{'MERCHANTPROVIDER_INFO_CANCEL' | translate}}</div>
+      <div (click)="saveProvider(merchantProviderForm.form.valid)">{{'MERCHANTPROVIDER_INFO_SAVE' | translate}}</div>
     </div>
   </div>
 </form>
