--- a/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-view.component.html
+++ b/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-view.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="entity; else spinner" class="entity-view">
-  <div class="entity-view__title">{{'MERCHANT_TITLE' | translate}}</div>
+  <div class="entity-view__title">{{'MERCHANTPROVIDER_TITLE' | translate}}</div>
 
   <div (click)="navigation.back()" class="entity-view__change-mode"><md-icon>reply</md-icon></div>
 
@@ -22,13 +22,13 @@
         </div>
       </div>
       <div class="entity-view__info__edit">
-        <div *ngIf="viewMode; else editActions" class="entity-view__info__edit__update" (click)="setMode(modes.Update)">{{'MERCHANT_INFO_EDIT' | translate}}</div>
+        <div *ngIf="viewMode; else editActions" class="entity-view__info__edit__update" (click)="setMode(modes.Update)">{{'MERCHANTPROVIDER_INFO_EDIT' | translate}}</div>
 
         <ng-template #editActions>
-          <div *ngIf="addMode; else editActionsEdit" class="entity-view__info__edit__update" (click)="saveProvider(inputForm.form.valid)">{{'MERCHANT_INFO_SAVE' | translate}}</div>
+          <div *ngIf="addMode; else editActionsEdit" class="entity-view__info__edit__update" (click)="saveProvider(inputForm.form.valid)">{{'MERCHANTPROVIDER_INFO_SAVE' | translate}}</div>
           <ng-template #editActionsEdit>
-            <div (click)="cancelEdit()">{{'MERCHANT_INFO_CANCEL' | translate}}</div>
-            <div class="entity-view__info__edit__update" (click)="saveProvider(entity)">{{'MERCHANT_INFO_UPDATE' | translate}}</div>
+            <div (click)="cancelEdit()">{{'MERCHANTPROVIDER_INFO_CANCEL' | translate}}</div>
+            <div class="entity-view__info__edit__update" (click)="saveProvider(entity)">{{'MERCHANTPROVIDER_INFO_UPDATE' | translate}}</div>
           </ng-template>
         </ng-template>
       </div>
@@ -70,5 +70,5 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="3" [cardsExpression]="'300px;300px;300px;300px'" [title]="'MERCHANT_TITLE' | translate"></spe-loader>
+  <spe-loader [numberOfTabs]="3" [cardsExpression]="'300px;300px;300px;300px'" [title]="'MERCHANTPROVIDER_TITLE' | translate"></spe-loader>
 </ng-template>
