--- a/src/app/pages/merchant-providers-page/merchant-providers-index/merchant-providers.component.html
+++ b/src/app/pages/merchant-providers-page/merchant-providers-index/merchant-providers.component.html
@@ -1,6 +1,6 @@
 <div class="entity-index">
   <div class="entity-index__title">
-    {{'MERCHANT_INDEX_TITLE' | translate}}
+    {{'MERCHANTPROVIDER_INDEX_TITLE' | translate}}
     <md-input [(ngModel)]="filterValue" placeholder="{{'INDEXPAGE_FILTER' | translate}}"></md-input>
   </div>
 
