Update position of topnav suggestor

--- a/src/app/navigation/topnav/topnav.component.scss
+++ b/src/app/navigation/topnav/topnav.component.scss
@@ -130,6 +130,8 @@ $main-color: #9B9A9B;
 
       autocomplete {
         position: absolute;
+        top: 45px;
+        left: 0;
         z-index: 5;
         width: 210px;
         max-height: 230px;
